# codebook-features

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Exploratory Analysis Codebook.ipynb  Exploratory_Analysis_Demo.ipynb  LM_interpretability Attn.ipynb  LM_interpretability MLP.ipynb  README.md  codebook.ipynb  eval.py  git_pull.sh  pyproject.toml  token-code.ipynb  toy_model-neox-10-states.ipynb  toy_model-neox-base.ipynb  toy_model-neox-multi-k.ipynb  toy_model.ipynb
codebook_circuits/mvp/: cb_activation_patching.py  codebook_act_patching.py  codebook_patching.py  codebook_patching_extended.py  codebook_path_patching.py  data.py  example.py  more_tl_mods.py  scratch.py  test_activation_patching.py  test_patching.py  utils.py
codebook_circuits/mvp/examples/: activation_patching_demo.py  path_patching_demo.py
codebook_features/: __init__.py  code_search_cache.py  code_search_utils.py  evaluate.py  evaluation.py  fsm_utils.py  mod_model_classes.py  models.py  run_clm.py  tl_mods.py  toy_utils.py  train_codebook.py  train_fsm_model.py  train_toy_model.py  trainer.py  utils.py
codebook_features/config/: __init__.py  fsm_main.yaml  main.yaml  test.yaml  test_fsm.yaml  test_pile.yaml  test_pythia.yaml  test_tinystories.yaml  test_toy.yaml  test_vqtorch.yaml  toy_main.yaml
codebook_features/webapp/: Code_Browser.py  utils.py
codebook_features/webapp/.streamlit/: config.toml
codebook_features/webapp/pages/: Concept_Code.py  Topic_Code_Browser.py
tests/: test_models.py  test_scripts.py
tutorials/: code_intervention.ipynb  tokfsm.ipynb
