[tool.poetry]
name = "codebook-features"
version = "0.1.0"
description = "The Codebook Features Library"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "codebook_features"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.13.1"
transformers = "^4.25.1"
datasets = "^2.7.1"
scikit-learn = "^1.2.0"
mypy = "^0.991"
setuptools = "^65.6.3"
evaluate = "^0.4.0"
hydra-core = "^1.3.0"
wandb = "^0.13.7"
zstandard = "^0.19.0"
ruff = "^0.0.200"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
