[tool.poetry]
name = "codebook-features"
version = "0.1.0"
description = "The Codebook Features Library"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "codebook_features"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.13.1"
transformers = "^4.25.1"
datasets = "^2.7.1"
scikit-learn = "^1.2.0"
mypy = "^0.991"
setuptools = "^65.6.3"
evaluate = "^0.4.0"
hydra-core = "^1.3.0"
wandb = "^0.13.7"
zstandard = "^0.19.0"
ruff = "^0.0.200"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "BLE", # flake8-blind-except
    "D",  # pydocstyle
]
# using google docstring convention
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "run_clm\\.py$",
]
