[tool.poetry]
name = "codebook-features"
version = "0.1.2"
description = "Sparse and discrete interpretability tool for neural networks"
authors = ["Mohammad Taufeeque <9taufeeque9@gmail.com>", "Alex Tamkin <alextamkin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "codebook_features"}]
homepage = "https://huggingface.co/spaces/taufeeque/codebook-features"
repository = "https://github.com/taufeeque9/codebook-features"
keywords = ["codebook", "features", "transformers", "language-models", "interpretability"]


[tool.poetry.dependencies]
python = ">3.9.7,<3.12"
torch = ">=2.0.0"
transformers = ">=4.29"
accelerate = ">=0.21"
datasets = ">=2.7.1"
scikit-learn = ">=1.2.0"
mypy = ">=0.991"
setuptools = ">=68.2.2"
evaluate = ">=0.4.0"
hydra-core = ">=1.3.0"
wandb = ">=0.14"
zstandard = ">=0.19.0"
termcolor = ">=2.3.0"
streamlit = ">=1.26.0"
streamlit-extras = ">=0.3.0"
ruff = ">=0.0.200"
transformer-lens = "==1.7.0"
plotly = "^5.17.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pre-commit = ">=2.20.0"
jupyter = ">=1.0.0"
jupyterlab = ">=3.5.0"
faiss-cpu = "^1.7.4"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "BLE", # flake8-blind-except
    "D",  # pydocstyle
]
# using google docstring convention
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
exclude = [
    "tl_mods.py",
    "run_clm.py",
    "mod_model_classes.py",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "tl_mods.py",
    "run_clm.py",
    "mod_model_classes.py",
]
